# directiv

./: .directiv.example.json  .env.example  .gitignore  .mise.toml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  directiv.config.example.json  index.html  linair.config.example.json  package.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: lint-on-edit.sh
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/claude-skills-plugin/skills/linear-issue/: SKILL.md
src-tauri/resources/directiv-plugin/: .mcp.json
src-tauri/resources/directiv-plugin/.claude-plugin/: plugin.json
src-tauri/resources/directiv-plugin/skills/commit/: SKILL.md
src-tauri/resources/directiv-plugin/skills/create-pr/: SKILL.md
src-tauri/resources/directiv-plugin/skills/linear-issue/: SKILL.md
src-tauri/resources/directiv-plugin/skills/linear-tactic/: SKILL.md
src-tauri/resources/directiv-plugin/skills/linear-tactic/references/: ticket-template.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  github.rs  hooks.rs  mod.rs  skills.rs  terminal.rs  tmux.rs  workspace.rs  worktree.rs
src/components/: ConfirmDialog.tsx
src/constants/: intervals.ts
src/hooks/: useBlockedByMutations.ts  useGitHub.ts  useLinear.ts  useSkills.ts  useStartTask.ts  useStopTask.ts  useTmux.ts  useWorkspace.ts  useWorktrees.ts
src/lib/: claudeState.ts  config.ts  github.ts  graphLayout.ts  linear.ts  tauri.ts  tmux-utils.ts  toast.ts  (+1 more)
(+25 files in other folders)
