[package]
name = "directiv"
version = "0.1.0"
description = "Unified dev workflow cockpit - orchestrates AI-assisted development with Linear, GitHub, tmux and git worktrees"
authors = ["nico-deforge"]
license = "MIT"
repository = "https://github.com/nico-deforge/directiv"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "directiv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "5"
